--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
     <head>
         <title>Codebusters</title>
         <link href = "index.css", rel = "stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
     </head>
     <body>
+        <div id = "generateButtonDiv">
+            <button id = "generateAristocrat", type = "submit", onclick = "generateCertain(event, PROBLEMTYPE.ARISTOCRAT); return false;">Random Aristocrat</button>
+            <button id = "generatePatristocrat", type = "submit", onclick = "generateCertain(event, PROBLEMTYPE.PATRISTOCRAT); return false;">Random Patristocrat</button>
+            <button id = "generatePolyalphabetic", type = "submit", onclick = "generateCertain(event, PROBLEMTYPE.POLYALPHABETIC); return false;">Random Polyalphabetic</button>
+            <button id = "generatePollux", type = "submit", onclick = "generateCertain(event, PROBLEMTYPE.POLLUX); return false;">Random Pollux</button>
+        </div>
         <p>Problem Type: <span id = "problemType"></span></p>
         <p>Key: <span id = "keyText"></span></p>
         <table id = "problemTable"></table>
